# reportify.tauri

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  Makefile  clippy.toml  diesel.toml  rustfmt.toml  tauri.conf.json
src-tauri/migration/: Cargo.toml  README.md
src-tauri/migration/src/: m20220101_000001_create_table.rs  main.rs
src-tauri/migrations/00000000000000_diesel_initial_setup/: up.sql
src-tauri/migrations/2024072100001_create_settings_table/: down.sql  up.sql
src-tauri/migrations/2024072100001_create_theme_settings/: down.sql  up.sql
src-tauri/src/: database.rs  lib.rs  main.rs
src-tauri/src/application/usecases/: mod.rs  settings_usecase.rs  theme_usecase.rs
src-tauri/src/domain/entities/: mod.rs  theme.rs
src-tauri/src/domain/models/: activity.rs  github.rs  mod.rs  settings.rs
src-tauri/src/domain/repositories/: activity_repository.rs  github_api_repository.rs  github_repository.rs  mod.rs  settings_repository.rs  theme_repository.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/clients/: github_graphql_api_client.rs  github_rest_api_client.rs  mod.rs
src-tauri/src/infrastructure/database/: mod.rs  models.rs  schema.rs
src-tauri/src/infrastructure/graphql/: mod.rs
src-tauri/src/infrastructure/models/: sample.rs
src-tauri/src/infrastructure/repositories/: activity_db_repository.rs  db_settings_repository.rs  github_api_rest_repository.rs  github_db_repository.rs  (+5 more)
src-tauri/src/presentation/: commands.rs
(+106 files in other folders)
